# sequel-ai

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AiChatPanel.tsx  AiSettingsModal.tsx  ConnectionTabBar.tsx  ContentView.tsx  Editor.tsx  HomePage.tsx  RelationsView.tsx  ResultPanel.tsx  ShortcutsModal.tsx  StatusBar.tsx  StructureView.tsx  TableContextMenu.tsx  TableInfoView.tsx  TableList.tsx  ToastContainer.tsx  Toolbar.tsx  TriggersView.tsx  WorkspacePage.tsx
src/hooks/: useAiSettings.ts  useAppData.ts  useFavorites.ts  useKeyboardShortcuts.ts  useQueryFavorites.ts  useQueryHistory.ts  useTableComments.ts  useTheme.ts  useToast.ts
src/utils/: schemaContext.ts
