[package]
name = "mysql_nl_sql_editor"
version = "0.1.0"
description = "Sequel AI - Database editor for MySQL and PostgreSQL with AI assistant"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
mysql = "25"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

